fixed z-index of edit bookings and navbar

--- a/react-app/src/components/Bookings/EditDeleteBookingModal/EditDeleteBookingModal.css
+++ b/react-app/src/components/Bookings/EditDeleteBookingModal/EditDeleteBookingModal.css
@@ -8,7 +8,7 @@
         position: relative;
         right: 15px;
         top: 50px;
-        z-index: 1;
+        /* z-index: 1; */
 }
 
 
